// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> renders 1`] = `
.c0 {
  position: absolute;
  top: 0;
  right: 0;
  width: 5rem;
  height: 5rem;
  overflow: hidden;
  color: #fff;
  border-radius: 0 0.6rem 0 0;
}

.c0:before {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent #f66663 transparent transparent;
  border-style: solid;
  border-width: 0 5rem 5rem 0;
  content: "";
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  width: 3rem;
  height: 3rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 32 32"
      >
        <path
          clip-rule="evenodd"
          d="M11.938 16.5a3.548 3.548 0 013.562-3.563 3.548 3.548 0 013.563 3.563 3.548 3.548 0 01-3.563 3.563 3.548 3.548 0 01-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112l.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Badge /> renders with correct styles and icon 1`] = `
.c0 {
  position: absolute;
  top: 0;
  right: 0;
  width: 5rem;
  height: 5rem;
  overflow: hidden;
  color: #fff;
  border-radius: 0 0.6rem 0 0;
}

.c0:before {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent #7994d4 transparent transparent;
  border-style: solid;
  border-width: 0 5rem 5rem 0;
  content: "";
}

.c1 {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  width: 3rem;
  height: 3rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 16 16"
      >
        <path
          d="M13.815 5.194l-5.929 6.739a.744.744 0 01-.51.232h-.022a.719.719 0 01-.51-.209L3.208 8.32a.699.699 0 010-.995.699.699 0 01.996 0l3.103 3.103 5.442-6.183a.702.702 0 01.996-.07.73.73 0 01.07 1.02z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;
